[gd_scene load_steps=3 format=3 uid="uid://d02my2b6pp7bc"]

[ext_resource type="Script" uid="uid://c8h2aqg2cdt8q" path="res://Scripts/settings.gd" id="1_7kwmf"]

[sub_resource type="ButtonGroup" id="ButtonGroup_patxt"]

[node name="Settings" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7kwmf")

[node name="Box" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="Box"]
layout_mode = 2
theme_type_variation = &"MenuTitle"
text = "Settings"

[node name="Board" type="HBoxContainer" parent="Box"]
layout_mode = 2

[node name="Label" type="Label" parent="Box/Board"]
layout_mode = 2
text = "Board:"

[node name="BoardStyles" type="OptionButton" parent="Box/Board"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 4
popup/item_0/text = "Rings"
popup/item_0/id = 0
popup/item_1/text = "Bright"
popup/item_1/id = 1
popup/item_2/text = "Dark"
popup/item_2/id = 2
popup/item_3/text = "Checkered"
popup/item_3/id = 3

[node name="Quality" type="HBoxContainer" parent="Box"]
unique_name_in_owner = true
layout_mode = 2

[node name="Quality" type="Label" parent="Box/Quality"]
layout_mode = 2
text = "Quality:"

[node name="Low" type="CheckBox" parent="Box/Quality"]
layout_mode = 2
button_pressed = true
button_group = SubResource("ButtonGroup_patxt")
text = "Low"

[node name="Mid" type="CheckBox" parent="Box/Quality"]
layout_mode = 2
button_group = SubResource("ButtonGroup_patxt")
text = "Mid "

[node name="High" type="CheckBox" parent="Box/Quality"]
layout_mode = 2
button_group = SubResource("ButtonGroup_patxt")
text = "High"

[node name="Engines" type="Label" parent="Box"]
unique_name_in_owner = true
layout_mode = 2
text = "TEI Engines:"

[node name="EngineGrid" type="GridContainer" parent="Box"]
unique_name_in_owner = true
layout_mode = 2
columns = 3

[node name="AddEngine" type="Button" parent="Box"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
text = "Add..."

[node name="EnginePopup" type="PopupPanel" parent="."]
oversampling_override = 1.0
size = Vector2i(720, 202)

[node name="Box" type="VBoxContainer" parent="EnginePopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 716.0
offset_bottom = 198.0

[node name="Grid" type="GridContainer" parent="EnginePopup/Box"]
layout_mode = 2
columns = 2

[node name="NameLabel" type="Label" parent="EnginePopup/Box/Grid"]
layout_mode = 2
text = "Name:"

[node name="Name" type="LineEdit" parent="EnginePopup/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PathLabel" type="Label" parent="EnginePopup/Box/Grid"]
layout_mode = 2
text = "Path:"

[node name="Path" type="LineEdit" parent="EnginePopup/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ParametersLabel" type="Label" parent="EnginePopup/Box/Grid"]
layout_mode = 2
text = "Parameters:"

[node name="Parameters" type="LineEdit" parent="EnginePopup/Box/Grid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Buttons" type="HBoxContainer" parent="EnginePopup/Box"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Cancel" type="Button" parent="EnginePopup/Box/Buttons"]
layout_mode = 2
text = "Cancel"

[node name="Ok" type="Button" parent="EnginePopup/Box/Buttons"]
layout_mode = 2
text = "Ok"

[connection signal="item_selected" from="Box/Board/BoardStyles" to="." method="_on_board_styles_item_selected"]
[connection signal="pressed" from="Box/AddEngine" to="." method="_on_add_engine_pressed"]
[connection signal="pressed" from="EnginePopup/Box/Buttons/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="EnginePopup/Box/Buttons/Ok" to="." method="_on_ok_pressed"]
